Web Inspector: REGRESSION(r266467): viewing a WebSocket created before Web Inspector was opened doesn't show any message frames https://bugs.webkit.org/show_bug.cgi?id=219510

Reviewed by Youenn Fablet.

Source/WebCore:

Updated test: http/tests/websocket/tests/hybi/inspector/before-load.html

Restored functionality prior to r266467 so that the `progressIdentifier` (previously `channelIdentifier`) is
available from `WebSocketChannel`.

* Modules/websockets/ThreadableWebSocketChannel.h:
* Modules/websockets/WebSocketChannel.cpp:
(WebCore::WebSocketChannel::WebSocketChannel):
(WebCore::WebSocketChannel::connect):
(WebCore::WebSocketChannel::fail):
(WebCore::WebSocketChannel::disconnect):
(WebCore::WebSocketChannel::didOpenSocketStream):
(WebCore::WebSocketChannel::didCloseSocketStream):
(WebCore::WebSocketChannel::didFailSocketStream):
(WebCore::WebSocketChannel::processBuffer):
(WebCore::WebSocketChannel::processFrame):
(WebCore::WebSocketChannel::sendFrame):
* Modules/websockets/WebSocketChannel.h:
- Reinstate a separate progress identifier for inspection
* Modules/websockets/WebSocketChannelInspector.cpp:
(WebCore::progressIdentifier const):
* Modules/websockets/WebSocketChannelInspector.h:
- Support getting the progress identifier.
* Modules/websockets/WorkerThreadableWebSocketChannel.h:
* inspector/agents/InspectorNetworkAgent.cpp:
(WebCore::InspectorNetworkAgent::enable):
(WebCore::InspectorNetworkAgent::webSocketForRequestId):

Source/WebKit:

Restored functionality prior to r266467 so that the `progressIdentifier` (previously `channelIdentifier`) is
available from `WebSocketChannel`.

* WebProcess/Network/WebSocketChannel.h:

LayoutTests:

Updated test to check that sent and received frames are correctly associated with WebSockets that were open
before the Web Inspector was opened.

* http/tests/websocket/tests/hybi/inspector/before-load-expected.txt:
* http/tests/websocket/tests/hybi/inspector/before-load.html:


Canonical link: https://commits.webkit.org/232560@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@270937 268f45cc-cd09-0410-ab3c-d52691b4dbfc