Source/WebCore/Modules/websockets/WebSocketChannel.h
@@ -114,6 +114,7 @@ public:
     void didFinishLoading() override;
     void didFail(ExceptionCode errorCode) override;
 
+    unsigned long progressIdentifier() const final { return m_progressIdentifier; }
     bool hasCreatedHandshake() const final { return !!m_handshake; }
     bool isConnected() const final { return m_handshake->mode() == WebSocketHandshake::Mode::Connected; }
     ResourceRequest clientHandshakeRequest(const CookieGetter&) const final;
@@ -208,7 +209,7 @@ private:
     bool m_shouldDiscardReceivedData { false };
     unsigned m_unhandledBufferedAmount { 0 };
 
-    unsigned m_identifier { 0 }; // m_identifier == 0 means that we could not obtain a valid identifier.
+    unsigned m_progressIdentifier { 0 }; // m_progressIdentifier == 0 means that we could not obtain a progress identifier.
 
     // Private members only for hybi-10 protocol.
     bool m_hasContinuousFrame { false };
