Source/WebCore/Modules/websockets/WebSocketChannelInspector.h
@@ -45,6 +45,8 @@ public:
     void didReceiveWebSocketFrame(Document*, const WebSocketFrame&);
     void didSendWebSocketFrame(Document*, const WebSocketFrame&);
     void didReceiveWebSocketFrameError(Document*, const String& errorMessage);
+    
+    unsigned long progressIdentifier() const;
 
 private:
     unsigned long m_progressIdentifier { 0 };
