Source/WebCore/inspector/agents/InspectorNetworkAgent.cpp
@@ -837,7 +837,7 @@ Protocol::ErrorStringOr<void> InspectorNetworkAgent::enable()
             auto& document = downcast<Document>(*webSocket->scriptExecutionContext());
             auto channel = webSocket->channel();
 
-            auto identifier = channel->identifier().toUInt64();
+            auto identifier = channel->progressIdentifier();
             didCreateWebSocket(identifier, webSocket->url());
 
             auto cookieRequestHeaderFieldValue = [document = makeWeakPtr(document)](const URL& url) -> String {
@@ -1014,7 +1014,7 @@ WebSocket* InspectorNetworkAgent::webSocketForRequestId(const Protocol::Network:
     LockHolder lock(WebSocket::allActiveWebSocketsMutex());
 
     for (auto* webSocket : activeWebSockets(lock)) {
-        if (IdentifiersFactory::requestId(webSocket->channel()->identifier().toUInt64()) == requestId)
+        if (IdentifiersFactory::requestId(webSocket->channel()->progressIdentifier()) == requestId)
             return webSocket;
     }
 
